log
Wed 15 May 2024 11:14:37 PM UTC: 
 tests:  0|5
total_score: 0/70
c402f82
Wed 15 May 2024 11:21:00 PM UTC: 
 sudoku.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:59:13: error: expected expression before ‘)’ token
   59 |          if()
      |             ^
sudoku.c:55:13: error: unused variable ‘k’ [-Werror=unused-variable]
   55 |     int i,j,k;
      |             ^
cc1: all warnings being treated as errors
Compilation failed
6457e29
Wed 15 May 2024 11:21:08 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:59:13: error: expected expression before ‘)’ token
   59 |          if()
      |             ^
Compilation failed
d3e0282
Wed 15 May 2024 11:21:18 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
c948dcf
Wed 15 May 2024 11:26:13 PM UTC: 
 sudoku.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
9301823
Wed 15 May 2024 11:29:45 PM UTC: 
 sudoku.c | 16 ++++------------
 1 file changed, 4 insertions(+), 12 deletions(-)
 tests:  0|5
total_score: 0/70
8c14e10
Wed 15 May 2024 11:29:51 PM UTC: 
 sudoku.c | 16 ++++++++++++----
 1 file changed, 12 insertions(+), 4 deletions(-)
 tests:  0|5
total_score: 0/70
e798a09
Wed 15 May 2024 11:42:15 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:55:13: error: unused variable ‘k’ [-Werror=unused-variable]
   55 |     int i,j,k;
      |             ^
cc1: all warnings being treated as errors
Compilation failed
8d77171
Wed 15 May 2024 11:42:22 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
d308585
Wed 15 May 2024 11:42:38 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
test.c: In function ‘get_adj_nodes’:
sudoku.c:58:24: error: iteration 9 invokes undefined behavior [-Werror=aggressive-loop-optimizations]
   58 |           if(n->sudo[i][j]==0){
      |              ~~~~~~~~~~^~~
sudoku.c:57:17: note: within this loop
   57 |        for(j=0;j<=9;j++){
      |                ~^~~
cc1: all warnings being treated as errors
Compilation failed
109f865
Wed 15 May 2024 11:42:43 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
8464709
Wed 15 May 2024 11:42:51 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
2b51d08
Wed 15 May 2024 11:43:38 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
cacd1cc
Wed 15 May 2024 11:43:51 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
99ad83f
Wed 15 May 2024 11:46:24 PM UTC: 
 sudoku.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_final’:
sudoku.c:74:9: error: ‘Node’ has no member named ‘List_next’
   74 |      n=n->List_next(n);
      |         ^~
sudoku.c:81:1: error: control reaches end of non-void function [-Werror=return-type]
   81 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
ee3eda9
Wed 15 May 2024 11:50:06 PM UTC: 
 sudoku.c | 8 ++------
 1 file changed, 2 insertions(+), 6 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:66:12: error: ‘adj’ undeclared (first use in this function)
   66 |     return adj;
      |            ^~~
sudoku.c:66:12: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c: In function ‘is_final’:
sudoku.c:77:1: error: expected identifier or ‘(’ before ‘}’ token
   77 | }
      | ^
test.c:245:5: error: ‘main’ is normally a non-static function [-Werror=main]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
  262 | }
      | ^
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:68:1: error: control reaches end of non-void function [-Werror=return-type]
   68 | }
      | ^
sudoku.c: In function ‘is_final’:
test.c:263: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:245:5: error: ‘main’ defined but not used [-Werror=unused-function]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:7:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
da54189
Wed 15 May 2024 11:50:34 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_final’:
sudoku.c:78:1: error: expected identifier or ‘(’ before ‘}’ token
   78 | }
      | ^
test.c:245:5: error: ‘main’ is normally a non-static function [-Werror=main]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
  262 | }
      | ^
test.c:263: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:245:5: error: ‘main’ defined but not used [-Werror=unused-function]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:7:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
5772674
Wed 15 May 2024 11:53:15 PM UTC: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_final’:
sudoku.c:80:1: error: control reaches end of non-void function [-Werror=return-type]
   80 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
032baeb
Wed 15 May 2024 11:53:27 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_final’:
sudoku.c:80:1: error: control reaches end of non-void function [-Werror=return-type]
   80 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
ed3c04c
Wed 15 May 2024 11:53:37 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_final’:
sudoku.c:80:1: error: control reaches end of non-void function [-Werror=return-type]
   80 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
2fb66e4
Wed 15 May 2024 11:53:46 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
c5f8b9d
